# b64rs

./: Cargo.toml  README.md
.github/: ci.yml
src/: decoder.rs  encoder.rs  lib.rs  main.rs  shared.rs
testdata/: haha.txt
