[package]
name = "b64rs"
version = "0.1.0"
authors = ["Wuriyanto <wuriyanto48@yahoo.co.id>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "b64rs"
path = "src/lib.rs"
test = true
crate-type = ["dylib", "rlib"]

[[bin]]
name = "b64rs"
path = "src/main.rs"

[dependencies]